# renegade-code-signature

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE.md
resurse/: aplicatie.rc  resurse.qrc
sursa/: Engine.cpp  Engine.h  FileScanner.cpp  FileScanner.h  MainWindow.cpp  MainWindow.h  RenegadeTemplate.cpp  RenegadeTemplate.h  Style.cpp  Style.h  main.cpp
